tests/ui/env-macro/option_env-no-args.rs
fn main() { option_env!(); } //~ ERROR: option_env! takes 1 argument
